compiler/test-data/parser/theme/errors/empty_instruction_set.frel
module theme.errors.empty_instruction_set

theme AppTheme {
    set empty_set { }
}
